--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 				<div class="entypo-down-open" id="scroll2">
 				</div></a>
 			</div>
+		<div id="aboutuslogo"><img src="xyz.png"/>
+		</div>
+		<div id="aboutus">
+			Aim of<span> E-CELL,NITH</span> is to create entrepreneurship culture in NIT Hamirpur.E-cell is established here by Mr. Siddhant Garg so that it can provide help to those ideas in students mind,so that they can turn to big companies in future.
+			we will give freedom to our young entrepreneurs so that they can becaame what they wants
+			to be.This is E-cell NITH for students.
+		</div>
 	</div>
 	<a name="thirdpage">
 	<div id="thirdpage">
@@ -155,7 +162,7 @@
 			</div>
 		</div>
 </a>
-<a name="galleryimage">
+
 <div id="mainfour">
 	<div class="gallery" style="
 	                            font-size: 50px;" >GALLERY</div>
@@ -173,7 +180,7 @@
 		<div class="photos" id="eight" data-animate-scroll='{"x": "200","rotationY":"-150", "duration": "2.5"}'></div>
 		<div class="photos" id="nine" data-animate-scroll='{"rotationX":"30", "duration": "1","scaleX": "0","scaleY": "0"}'></div>
 	</div>
-</div></a>
+</div><a name="galleryimage"></a>
 <div id="fifthpage">
 	<a name="cont."><div class="fifth">CONTACT</div></a>
 	<div class="fifthimage">
@@ -182,6 +189,11 @@
 			<div class="imageff"><img src="svj.jpg"/></div>
 			<div class="designation">Secretary-Shubham Vijay<br>
 			8351969867</div>
+		</div>
+		<div class="imagef">
+			<div class="imageff" ><img src="sm.jpg" /></div>
+			<div class="designation">Conveyer- Shashant Mangal<br>8351971511
+			</div>
 		</div>
 		<div class="imagef">
 			<div class="imageff" ><img src="sm.jpg" /></div>
